add search product activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="toilet.paper">Toilet Paper</string>
     <string name="food">Food</string>
     <string name="water">Water</string>
+    <string name="goods.add.title">Add goods</string>
 </resources>
