add product to goods

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,8 @@
     <string name="male">Male</string>
     <string name="female">Female</string>
     <string name="sex">Sex</string>
-    <string name="crowd.add.save">Add</string>
-    <string name="crowd.add.cancel">Cancel</string>
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
     <string name="crowd.person.remove.title">Confirm action</string>
     <string name="crowd.person.remove.text">Would you like to remove this person?</string>
     <string name="main.title">Goods</string>
