--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
     <string name="app_name">Stoppiler</string>
-    <string name="intro.title">Hi there!</string>
-    <string name="intro.text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
+    <string name="intro.title">Hi friend!</string>
+    <string name="intro.text">This app is created to make life easier for people in quarantine or social isolation due to COVID-19.\n\nNowaday, it might quite challenging to figure out do you have enough stuff for life in isolation or not. We will try to help you to make an effective shopping list, avoid over-consumption and to plan the next trip to the shop!\n\nFor this you just need to:\n - Fill up information about yourself and the rest people you are living with.\n - Add the goods you already have.\n\nFinally, we will calculate for you how long can you #stayathome until the next trip to the store.\n\nNote: The values used for calculations are averaged, and can differ depend on the living conditions of the person, your daily actgivities and other factors</string>
     <string name="next">Next</string>
     <string name="crowd.title">Add your family</string>
     <string name="crowd.add.title">Add new person</string>
