--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="crowd.add.title">Add new person</string>
     <string name="name">Name</string>
     <string name="age">Age</string>
+    <string name="weight">Weight (kg)</string>
+    <string name="height">Height (cm)</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
     <string name="sex">Sex</string>
