polishing code and UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,6 @@
     <string name="help.title">Help</string>
     <string name="help.text">TBD</string>
     <string name="product.volume.pattern">%d %s</string>
+    <string name="goods.estimation.pattern">%.1f days</string>
+    <string name="estimation.not.available">-</string>
 </resources>
